--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,32 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+.section{
+    display: flex;
+    gap:4;
+
+    display: flex; justify-content:center; align-items: center; height: 10vh;
+}
+.container{
+    height: 100px;
+    width: 100px;
+    border: 2px solid brown;
+    background-color: skyblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: red;
+    margin-top: 15px;
+}
+.timer-watch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.timer-watch-container{
+    display: flex;
+}
